<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
  <ImageView
        android:contentDescription="@string/titanic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/game"
      />
           <Button
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:background="@drawable/white_arrow"
          android:id="@+id/backButton"
          android:contentDescription="@string/b_arrow" />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="#FFFFFF"
          android:layout_marginLeft="12dp"
          android:text="@string/rules_info"
          android:shadowColor="#000000"
          android:shadowDx="1.0"
          android:shadowDy="1.0"
          android:shadowRadius="2"
          android:textSize="25sp"
          android:layout_gravity="center_horizontal"
          android:layout_marginStart="10dp" />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rules_text"
          android:layout_gravity="center"
          android:textSize="18sp"
          android:gravity="center_horizontal"
          android:textColor="#FFFFFFFF"
          android:shadowColor="#000000"
          android:shadowDx="1.0"
          android:shadowDy="1.0"
          android:shadowRadius="2"
                    />
  </FrameLayout>


